modal insert update usuario

--- a/bi/src/Views/templates/logado.twig
+++ b/bi/src/Views/templates/logado.twig
@@ -261,9 +261,8 @@
     </main>
   </div>
 </div>
-<script src="https://getbootstrap.com/docs/5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js" crossorigin="anonymous"></script>
-<script src="dashboard.js"></script>
+<script src="public/assets/index.js"></script>
+
 </body>
 </html>
